--- a/programs.html
+++ b/programs.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Programs | FitLife</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -10,20 +12,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top custom-nav">
   <div class="container">
     <a class="navbar-brand" href="index.html">FitLife</a>
-
-    <button class="navbar-toggler" type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#menu"
-      aria-controls="menu"
-      aria-expanded="false"
-      aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="menu">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="programs.html">Programs</a></li>
+        <li class="nav-item"><a class="nav-link active" href="programs.html">Programs</a></li>
         <li class="nav-item"><a class="nav-link" href="trainers.html">Trainers</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
@@ -31,15 +26,81 @@
   </div>
 </nav>
 
+<section class="program-hero">
+  <h1>Our Training Programs</h1>
+  <p>Choose the right plan for your fitness goals</p>
+</section>
 
-<div class="container my-5">
-  <h2 class="text-center mb-4">Our Programs</h2>
+<section class="container program-section">
   <div class="row g-4">
-    <div class="col-md-4"><div class="card p-3">Strength Training</div></div>
-    <div class="col-md-4"><div class="card p-3">Fat Loss</div></div>
-    <div class="col-md-4"><div class="card p-3">Cardio Fitness</div></div>
-  </div>
-</div>
+    <div class="col-md-4">
+      <div class="program-card">
+        <h4>Strength Training</h4>
+        <p>Build muscle and raw strength</p>
+        <ul>
+          <li>Weight training</li>
+          <li>Progressive overload</li>
+          <li>Beginner to advanced</li>
+        </ul>
+        <button class="btn btn-outline-danger">Learn More</button>
+      </div>
+    </div>
 
+    <div class="col-md-4">
+      <div class="program-card">
+        <h4>Fat Loss Program</h4>
+        <p>Burn fat while preserving muscle</p>
+        <ul>
+          <li>HIIT workouts</li>
+          <li>Diet guidance</li>
+          <li>Weekly tracking</li>
+        </ul>
+        <button class="btn btn-outline-danger">Learn More</button>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="program-card">
+        <h4>Cardio Fitness</h4>
+        <p>Improve endurance and heart health</p>
+        <ul>
+          <li>Treadmill & cycling</li>
+          <li>Endurance training</li>
+          <li>Heart monitoring</li>
+        </ul>
+        <button class="btn btn-outline-danger">Learn More</button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="program-extra">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-4">
+        <h3>Beginner Friendly</h3>
+        <p>No experience required</p>
+      </div>
+      <div class="col-md-4">
+        <h3>Flexible Timings</h3>
+        <p>Morning and evening slots</p>
+      </div>
+      <div class="col-md-4">
+        <h3>Expert Support</h3>
+        <p>Certified trainers available</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="program-cta">
+  <h2>Need help choosing a program?</h2>
+  <p>Talk to our trainers for a free consultation</p>
+  <a href="contact.html" class="btn btn-light">Contact Now</a>
+</section>
+
+<footer>© 2026 FitLife Gym</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
